[tool.poetry]
name = "project roject"
version = "0.1.0"
description = ""
authors = ["Exoniack <55805926+Exoniack@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
